# quasi-apiron

./: apiron_example_basic.py  apiron_example_caller_endpoint_args.py  apiron_example_instance_domain.py  apiron_example_multiple_callers.py  apiron_example_pagination.py  apiron_instantiated_example_basic.py  apiron_instantiated_example_caller_endpoint_args.py  apiron_instantiated_example_instance_domain.py  apiron_instantiated_example_pagination.py  pyproject.toml  quasi_apiron.py  quasi_example_basic.py  quasi_example_caller_endpoint_args.py  quasi_example_instance_domain.py  quasi_example_multiple_callers.py  quasi_example_pagination.py  shell.nix
